--- a/ios/orcamentoParticipativo/Info.plist
+++ b/ios/orcamentoParticipativo/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,34 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Alegreya-Italic-VariableFont_wght.ttf</string>
+		<string>Alegreya-VariableFont_wght.ttf</string>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-BlackItalic.ttf</string>
+		<string>Roboto-Bold.ttf</string>
+		<string>Roboto-BoldItalic.ttf</string>
+		<string>Roboto-Italic.ttf</string>
+		<string>Roboto-Light.ttf</string>
+		<string>Roboto-LightItalic.ttf</string>
+		<string>Roboto-Medium.ttf</string>
+		<string>Roboto-MediumItalic.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>Roboto-Thin.ttf</string>
+		<string>Roboto-ThinItalic.ttf</string>
+		<string>Alegreya-Black.ttf</string>
+		<string>Alegreya-BlackItalic.ttf</string>
+		<string>Alegreya-Bold.ttf</string>
+		<string>Alegreya-BoldItalic.ttf</string>
+		<string>Alegreya-ExtraBold.ttf</string>
+		<string>Alegreya-ExtraBoldItalic.ttf</string>
+		<string>Alegreya-Italic.ttf</string>
+		<string>Alegreya-Medium.ttf</string>
+		<string>Alegreya-MediumItalic.ttf</string>
+		<string>Alegreya-Regular.ttf</string>
+		<string>Alegreya-SemiBold.ttf</string>
+		<string>Alegreya-SemiBoldItalic.ttf</string>
+	</array>
 </dict>
 </plist>
