--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "orcamentoParticipativo",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": ["./assets/fonts/"]
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
