--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-media-query": "^2.0.1",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
