--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-media-query": "^2.0.1",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
