--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-media-query": "^2.0.1",
