--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-media-query": "^2.0.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0"
+    "react-native-svg": "^13.9.0",
+    "strapi-sdk-js": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
