feat: pagina das propostas com detalhes já está funcionando e renderização de markdown

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@ronradtke/react-native-markdown-display": "^8.0.0",
+    "os": "^0.1.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-markdown-text": "^1.0.1",
     "react-native-media-query": "^2.0.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
