--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,11 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
+APP_KEYS="tobemodified"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+DATABASE_CLIENT=postgres
+DATABASE_HOST="localhost"
+DATABASE_NAME="tobemodified"
+DATABASE_USERNAME="tobemodified"
+DATABASE_PASSWORD="tobemodified"
+DATABASE_PORT=5432
+NODE_ENV=development
