chore: adicionando rect-native-dotenv
chore: configurando react-native-dotenv

fix: configurando com variáveis de ambiente

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
       "assets/*": ["assets/*"],
       "components/*": ["src/components/*"],
       "src/*": ["src/*"]
-    }
+    },
+    "typeRoots": ["./types"]
   }
 }
